onlineboutiqueapp-infra-routing-kube-manifests/HTTProute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-app-route
  namespace: boutique-app
spec:
  hostnames:
    - longhauler.shop #"app.longhauler.shop"
    - app.longhauler.shop
  parentRefs:
  # - group: gateway.networking.k8s.io
  #   namespace: default
  #   kind: Gateway
  #   name: app-alb-gateway
  #   sectionName: http
  - group: gateway.networking.k8s.io
    namespace: default
    kind: Gateway
    name: app-alb-gateway
    sectionName: https
  rules:
    - matches:  
      - path: 
          type: PathPrefix
          values: /
      - backendRefs:
        - name: frontend
          port: 80
